argocd/radar/radar.yaml
# ########################################################## INGRESS ROUTE

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radar-ingress
  namespace: radar
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radar.andreiboghean.com`)
      services:
        - name: radar
          port: 9280
  tls:
    certResolver: default
    # - kind: Rule
      # match: Host(`argocd.andreiboghean.com`) && Header(`Content-Type`, `application/grpc`)
      # priority: 11
      # services:
        # - name: argocd-server
          # port: 80
          # scheme: h2c
